Added labels to App/Navigation and App/Map.

--- a/Kapitel/02_App/02_t_Navigation/01_Screens/main.tex
+++ b/Kapitel/02_App/02_t_Navigation/01_Screens/main.tex
@@ -1,4 +1,4 @@
-\subsection{Ansichten}
+\subsection{Ansichten}\label{App_Navigation_Screens}
 Die App besitzt die folgenden Ansichten:
 \begin{itemize}
     \item \texttt{Kartenansicht}: Diese Ansicht ist die Hauptansicht der App. Die App zeigt nach dem Starten diese Ansicht an. 
