--- a/Kapitel/02_App/02_t_Navigation/02_Wechsel/main.tex
+++ b/Kapitel/02_App/02_t_Navigation/02_Wechsel/main.tex
@@ -1,9 +1,9 @@
-\subsection{Wechsel zwischen Ansichten}
+\subsection{Wechsel zwischen Ansichten}\label{App_Navigation_Wechsel}
 Der Wechsel zwischen den Ansichten wird mithilfe der von \href{https://developer.android.com/jetpack/compose/navigation?hl=fr}
 {Jetpack Compose bereitgestellten Navigation mithilfe eines NavHosts und eines NavControllers} 
 umgesetzt.
 
-\subsubsection*{Ziele}
+\subsubsection*{Ziele}\label{App_Navigation_Ziele}
 Der Wechsel in eine bestimmte Ansicht kann durch folgende Ziele durchgeführt werden:
 \begin{itemize}
     \item \texttt{Kartenansicht}: 
