--- a/Kapitel/02_App/03_Map/01_View/00_Library/main.tex
+++ b/Kapitel/02_App/03_Map/01_View/00_Library/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{Library Osmdroid}
+\subsubsection{Library Osmdroid}\label{App_Map_View_Library}
 Die quelloffene Library \href{https://osmdroid.github.io/osmdroid/}{Osmdroid} stellt Werkzeuge und View-Klassen zur Verfügung, die das Anzeigen, 
 Interagieren und Manipulieren von Karten erleichtern.
 Mehr über \href{https://osmdroid.github.io/osmdroid/}{Osmdroid} ist hier zu finden:
