--- a/Kapitel/02_App/03_Map/01_View/Klassendiagramm/main.tex
+++ b/Kapitel/02_App/03_Map/01_View/Klassendiagramm/main.tex
@@ -1,5 +1,5 @@
 \begin{samepage}
-\subsubsection{Klassendiagramm}
+\subsubsection{Klassendiagramm}\label{App_Map_View_Klassendiagramm}
 Im Folgenden ist das Klassendiagramm der Klassen zum Anzeigen der Karte zu sehen.
 \includegraphics[width=15cm]{\currfiledir images/Klassendiagramm_App_View_Karte.pdf}
 
