--- a/Kapitel/02_App/03_Map/01_View/LevelChangeDisplay/main.tex
+++ b/Kapitel/02_App/03_Map/01_View/LevelChangeDisplay/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{LevelChangeDisplay}
+\subsubsection{LevelChangeDisplay}\label{App_Map_View_LevelChangeDisplay}
 \paragraph*{Typ}
 \texttt{Composable}.
 \paragraph*{Beschreibung}
