--- a/Kapitel/02_App/03_Map/01_View/MapObjectInfoDisplay/main.tex
+++ b/Kapitel/02_App/03_Map/01_View/MapObjectInfoDisplay/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{MapObjectInfoDisplay}
+\subsubsection{MapObjectInfoDisplay}\label{App_Map_View_MapObjectInfoDisplay}
 \paragraph*{Typ}
 \texttt{Composable}.
 \paragraph*{Beschreibung}
@@ -93,7 +93,7 @@ In beiden Fällen gibt es die gleiche Animation: Die kompakte Anzeige verschwind
     \item \texttt{controller : IMapObjectInfoController} IMapObjectInfoController von dem diese Klasse ihre Daten bezieht.
 \end{itemize}
 
-\subsubsection*{Bilder}
+\subsubsection*{Bilder}\label{App_Map_View_MapObjectInfoDisplay_Bilder}
 \begin{minipage}{\linewidth}
     \centering
     \begin{minipage}{.49\textwidth}
