--- a/Kapitel/02_App/03_Map/01_View/MapScreen/main.tex
+++ b/Kapitel/02_App/03_Map/01_View/MapScreen/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{MapScreen}
+\subsubsection{MapScreen}\label{App_Map_View_MapScreen}
 \paragraph*{Typ}
 \texttt{Composable}.
 \paragraph*{Beschreibung}
@@ -79,7 +79,7 @@ Zur Implementierung können die Klassen \href{https://osmdroid.github.io/osmdroi
 {MyLocationNewOverlay} für das Anzeigen des Standorts und \href{https://osmdroid.github.io/osmdroid/javadocs/osmdroid-android/debug/org/osmdroid/views/overlay/compass/CompassOverlay.html}
 {CompassOverlay} für das Anzeigen des Kompasses in Betracht gezogen werden.
 
-\subsubsection*{Bilder}
+\subsubsection*{Bilder}\label{App_Map_View_MapScreen_Bilder}
 \begin{minipage}{\linewidth}
     \centering
     \begin{minipage}{.49\textwidth}
