--- a/Kapitel/02_App/03_Map/02_ViewModel/BuildingModeController/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/BuildingModeController/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{BuildingModeController}
+\subsubsection{BuildingModeController}\label{App_Map_ViewModel_BuildingModeController}
 \paragraph*{Typ}
 Implementiert \texttt{MapLayerDataController}.
 \paragraph*{Beschreibung}
