--- a/Kapitel/02_App/03_Map/02_ViewModel/LevelModeController/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/LevelModeController/main.tex
@@ -1,11 +1,11 @@
-\subsubsection{LevelModeController}
+\subsubsection{LevelModeController}\label{App_Map_ViewModel_LevelModeController}
 \paragraph*{Typ}
 Implementiert MapLayerDataController, LevelChangeController.
 \paragraph*{Beschreibung}
 Diese Klasse steuert den Etagenmodus. Sie stellt alle benötigten Daten bereit, um die aktuelle Etage anzuzeigen. 
 Sie stellt alle benötigten Aufrufe bereit, um Interaktionen mit der Etagenkarte zu verarbeiten.
 
-\subsubsection*{\texttt{+ <<create>> LevelModeController(dataProvider : IMapDataProvider)}}%$$$M
+\subsubsection*{\texttt{+ <<create>> LevelModeController(dataProvider : IMapDataProvider)}}\label{App_Map_ViewModel_createLevelModeController}%$$$M
 \paragraph*{Beschreibung}
 Erstellt einen neuen LevelModeController.
 \paragraph*{Parameter}
@@ -13,7 +13,7 @@ Erstellt einen neuen LevelModeController.
     \item \texttt{dataProvider : IMapDataProvider} IMapDataProvider von dem diese Klasse die Kartendaten bezieht.
 \end{itemize}
 
-\subsubsection*{\texttt{+ startLevelMode(mapId : int)}}%$$$M
+\subsubsection*{\texttt{+ startLevelMode(mapId : int)}}\label{App_Map_ViewModel_startLevelMode}%$$$M
 \paragraph*{Kurzbeschreibung}
 Startet die Etagenansicht eines Gebäudes.
 \paragraph*{Beschreibung}
