--- a/Kapitel/02_App/03_Map/02_ViewModel/MapController/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/MapController/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{MapController}
+\subsubsection{MapController}\label{App_Map_ViewModel_MapController}
 \paragraph*{Typ}
 Implementiert \texttt{MapDisplayDataProvider}.
 \paragraph*{Beschreibung}
@@ -11,7 +11,7 @@ der nicht in der App existiert (aber das zugehörige Gebäude existiert). In die
 werden und das Gebäude fokussiert werden.\\
 Diese Information, was fokussiert werden soll, ist durch den Wechsel zwischen Ansichten durch den NavHost und NavGraph verfügbar (siehe Navigation).
 
-\subsubsection*{\texttt{+ <<create>> MapController(dataProvider : IMapDataProvider)}}%$$$M
+\subsubsection*{\texttt{+ <<create>> MapController(dataProvider : IMapDataProvider)}}\label{App_Map_ViewModel_createMapController}%$$$M
 \paragraph*{Kurzbeschreibung}
 Erstellt einen neuen MapController.
 \paragraph*{Beschreibung}
