--- a/Kapitel/02_App/03_Map/02_ViewModel/MapObjectInfoController/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/MapObjectInfoController/main.tex
@@ -1,11 +1,11 @@
-\subsubsection{MapObjectInfoController}
+\subsubsection{MapObjectInfoController}\label{App_Map_ViewModel_MapObjectInfoController}
 \paragraph*{Typ}
 Implementiert \texttt{IMapObjectInfoController}.
 \paragraph*{Beschreibung}
 Diese Klasse implementiert die IMapObjectInfoController Schnittstelle und bezieht die Daten 
 dafür aus einem IMapDataProvider und einem IAliasDataProvider.
 
-\subsubsection*{\texttt{+ <<create>> MapObjectInfoController(dataProvider : IMapDataProvider)}}%$$$M
+\subsubsection*{\texttt{+ <<create>> MapObjectInfoController(dataProvider : IMapDataProvider)}}\label{App_Map_ViewModel_createMapObjectInfoController}%$$$M
 \paragraph*{Beschreibung}
 Erstellt einen neuen MapObjectInfoController.
 \paragraph*{Parameter}
