--- a/Kapitel/02_App/03_Map/03_Model/DisplayDataProvider/main.tex
+++ b/Kapitel/02_App/03_Map/03_Model/DisplayDataProvider/main.tex
@@ -1,10 +1,10 @@
-\subsubsection{DisplayDataProvider}
+\subsubsection{DisplayDataProvider}\label{App_Map_Model_DisplayDataProvider}
 \paragraph*{Typ}
 Klasse.
 \paragraph*{Beschreibung}
 Diese Klasse stellt die Anzeigedaten für die Gebäude oder die Räume einer Etage bereit.
 
-\subsubsection*{\texttt{+ getBuildingDisplayData() : LiveData<List<DisplayData>>}}%$$$M
+\subsubsection*{\texttt{+ getBuildingDisplayData() : LiveData<List<DisplayData>>}}\label{App_Map_Model_getBuildingDisplayData_Display}%$$$M
 \paragraph*{Beschreibung}
 Gibt die Anzeigedaten für alle Gebäude zurück.
 \paragraph*{Parameter}
@@ -12,7 +12,7 @@ Keine.
 \paragraph*{Rückgabewert}
 \texttt{LiveData<List<DisplayData>>}, DisplayData für alle Gebäude.
 
-\subsubsection*{\texttt{+ getRoomDisplayData(mapId : int, level : int) : LiveData<List<DisplayData>>}}%$$$M
+\subsubsection*{\texttt{+ getRoomDisplayData(mapId : int, level : int) : LiveData<List<DisplayData>>}}\label{App_Map_Model_getRoomDisplayData_Display}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt die Anzeigedaten für Räume einer Etage zurück.
 \paragraph*{Beschreibung}
