--- a/Kapitel/02_App/03_Map/03_Model/MapDataProvider/main.tex
+++ b/Kapitel/02_App/03_Map/03_Model/MapDataProvider/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{MapDataProvider}
+\subsubsection{MapDataProvider}\label{App_Map_Model_MapDataProvider}
 \paragraph*{Typ}
 Implementiert \texttt{IMapDataProvider}.
 \paragraph*{Beschreibung}
