--- a/Kapitel/02_App/03_Map/03_Model/MapObjectInformationProvider/main.tex
+++ b/Kapitel/02_App/03_Map/03_Model/MapObjectInformationProvider/main.tex
@@ -1,10 +1,10 @@
-\subsubsection{MapObjectInformationProvider}
+\subsubsection{MapObjectInformationProvider}\label{App_Map_Model_MapObjectInformationProvider}
 \paragraph*{Typ}
 Klasse.
 \paragraph*{Beschreibung}
 Diese Klasse stellt Informationen zu Kartenobjekten bereit.
 
-\subsubsection*{\texttt{+ getBuildingAddress(mapId : int) : String}}%$$$M
+\subsubsection*{\texttt{+ getBuildingAddress(mapId : int) : String}}\label{App_Map_Model_getBuildingAddress_Map}%$$$M
 \paragraph*{Beschreibung}
 Gibt die Adresse eines Gebäudes zurück.
 \paragraph*{Parameter}
@@ -14,7 +14,7 @@ Gibt die Adresse eines Gebäudes zurück.
 \paragraph*{Rückgabewert}
 \texttt{String} mit Adresse, oder \texttt{null}, wenn MapId kein Gebäude ist.
 
-\subsubsection*{\texttt{+ getRoomData(mapId : int) : (RoomType, String, int)}}%$$$M
+\subsubsection*{\texttt{+ getRoomData(mapId : int) : (RoomType, String, int)}}\label{App_Map_Model_getRoomData_Map}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt Daten zu einem Raum zurück.
 \paragraph*{Beschreibung}
@@ -32,7 +32,7 @@ Ist die gegebene MapId ungültig oder kein Raum, wird \texttt{null} zurückgegeb
 \paragraph*{Rückgabewert}
 \texttt{(RoomType, String, int, List<String>)} Raumdaten oder \texttt{null}.
 
-\subsubsection*{\texttt{+ getPersons(mapId : int) : List<String>}}%$$$M
+\subsubsection*{\texttt{+ getPersons(mapId : int) : List<String>}}\label{App_Map_Model_getPersons_Map}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt die Namen der Personen zurück, die zu einem Kartenobjekt gehören.
 \paragraph*{Beschreibung}
