--- a/Kapitel/02_App/03_Map/03_Model/PositionDataManager/main.tex
+++ b/Kapitel/02_App/03_Map/03_Model/PositionDataManager/main.tex
@@ -1,10 +1,10 @@
-\subsubsection{PositionDataManager}
+\subsubsection{PositionDataManager}\label{App_Map_Model_PositionDataManager}
 \paragraph*{Typ}
 Klasse.
 \paragraph*{Beschreibung}
 Diese Klasse erlaubt das Lesen und Schreiben der letzten Position.
 
-\subsubsection*{\texttt{+ getLastSavedPosition() : IGeoPoint}}%$$$M
+\subsubsection*{\texttt{+ getLastSavedPosition() : IGeoPoint}}\label{App_Map_Model_getLastSavedPosition_Position}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt die letzte gespeicherte Position zurück.
 \paragraph*{Beschreibung}
@@ -15,7 +15,7 @@ Keine.
 \paragraph*{Rückgabewert}
 \texttt{IGeoPoint} mit letzter gespeicherter Position (oder Default-Wert), ist nie \texttt{null}.
 
-\subsubsection*{\texttt{+ savePosition(pos : IGeoPoint)}}%$$$M
+\subsubsection*{\texttt{+ savePosition(pos : IGeoPoint)}}\label{App_Map_Model_savePosition_Position}%$$$M
 \paragraph*{Beschreibung}
 Speichert eine Position als letzte Position.
 \paragraph*{Parameter}
