--- a/Kapitel/02_App/03_Map/03_Model/TileSourceProvider/main.tex
+++ b/Kapitel/02_App/03_Map/03_Model/TileSourceProvider/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{TileSourceProvider}
+\subsubsection{TileSourceProvider}\label{App_Map_Model_TileSourceProvider}
 \paragraph*{Typ}
 Klasse.
 \paragraph*{Beschreibung}
@@ -8,7 +8,7 @@ Diese Klasse stellt die \href{https://osmdroid.github.io/osmdroid/javadocAll/org
 {ITileSource} auf.
 
 \subsubsection*{\texttt{+ getFloorMapTileSource(mapId : int, level : int) : \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}
-{ITileSource}}}%$$$M
+{ITileSource}}}\label{App_Map_Model_getFloorMapTileSource_TileSource}%$$$M
 \paragraph*{Beschreibung}
 Gibt eine \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}
 {ITileSource} mit den Kartendaten für das Stockwerk eines Gebäudes zurück.\\
@@ -23,7 +23,7 @@ Existiert die angeforderte Etagenkarte nicht auf dem Gerät, wird \texttt{null} 
 {ITileSource} mit den Kartendaten für die Etage oder \texttt{null}.
 
 \subsubsection*{\texttt{+ getBuildingTileSource() : \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}
-{ITileSource}}}%$$$M
+{ITileSource}}}\label{App_Map_Model_getBuildingTileSource_TileSource}%$$$M
 \paragraph*{Beschreibung}
 Gibt eine \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}
 {ITileSource} mit den Kartendaten für alle Gebäude zurück.
