--- a/Kapitel/02_App/03_Map/02_ViewModel/MapDisplayDataProvider/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/MapDisplayDataProvider/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{MapDisplayDataProvider}
+\subsubsection{MapDisplayDataProvider}\label{App_Map_ViewModel_MapDisplayDataProvider}
 \paragraph*{Typ}
 \texttt{Interface}.
 \paragraph*{Beschreibung}
@@ -6,7 +6,7 @@ Dieses Interface ist eine Schnittstelle für Lade- und Speicheroperationen zur a
 Klassen dieses Interfaces können von einem Beobachter beobachtet werden. Dazu werden 
 LiveData-Klassen benutzt.
 
-\subsubsection*{\texttt{+ getTileSource() : LiveData<ITileSource>}}%$$$M
+\subsubsection*{\texttt{+ getTileSource() : LiveData<ITileSource>}}\label{App_Map_ViewModel_getTileSource}%$$$M
 \paragraph*{Beschreibung}
 Gibt die ITileSource mit den Kartendaten zurück.
 \paragraph*{Parameter}
@@ -14,7 +14,7 @@ Keine.
 \paragraph*{Rückgabewert}
 \texttt{LiveData<TileSource>} mit den Kartendaten.
 
-\subsubsection*{\texttt{+ saveLastPos(pos : IGeoPoint)}}%$$$M
+\subsubsection*{\texttt{+ saveLastPos(pos : IGeoPoint)}}\label{App_Map_ViewModel_saveLastPos}%$$$M
 \paragraph*{Beschreibung}
 Speichert eine gegebene Position als letzte Position.
 \paragraph*{Parameter}
@@ -24,7 +24,7 @@ Speichert eine gegebene Position als letzte Position.
 \paragraph*{Rückgabewert}
 \texttt{Void}.
 
-\subsubsection*{\texttt{+ getLastPos() : IGeoPoint}}%$$$M
+\subsubsection*{\texttt{+ getLastPos() : IGeoPoint}}\label{App_Map_ViewModel_getLastPos}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt die letzte Position zurück.
 \paragraph*{Beschreibung}
@@ -36,7 +36,7 @@ Keine.
 \paragraph*{Rückgabewert}
 \texttt{IGeoPoint}, letzte Position.
 
-\subsubsection*{\texttt{+ getFocusedPos() : LiveData<IGeoPoint>}}%$$$M
+\subsubsection*{\texttt{+ getFocusedPos() : LiveData<IGeoPoint>}}\label{App_Map_ViewModel_getFocusedPos}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt die Position zurück, die mittig auf der Karte angezeigt werden muss.
 \paragraph*{Beschreibung}
@@ -48,7 +48,7 @@ Keine.
 \paragraph*{Rückgabewert}
 \texttt{LiveData<IGeoPoint>}, Position, die mittig angezeigt werden soll.
 
-\subsubsection*{\texttt{+ getBuildingController() : MapLayerDataController}}%$$$M
+\subsubsection*{\texttt{+ getBuildingController() : MapLayerDataController}}\label{App_Map_ViewModel_getBuildingController}%$$$M
 \paragraph*{Beschreibung}
 Gibt den MapLayerDataController für die Gebäude-Ebene der Karte zurück.
 \paragraph*{Parameter}
@@ -56,7 +56,7 @@ Keine.
 \paragraph*{Rückgabewert}
 \texttt{MapLayerDataController} für die Gebäude-Ebene der Karte.
 
-\subsubsection*{\texttt{+ getLevelController() : MapLayerDataController}}%$$$M
+\subsubsection*{\texttt{+ getLevelController() : MapLayerDataController}}\label{App_Map_ViewModel_getLevelController}%$$$M
 \paragraph*{Beschreibung}
 Gibt den MapLayerDataController für die Etagen-Ebene auf der Karte zurück.
 \paragraph*{Parameter}
@@ -64,7 +64,7 @@ Keine.
 \paragraph*{Rückgabewert}
 \texttt{MapLayerDataController} für die Etagen-Ebene auf der Karte.
 
-\subsubsection*{\texttt{+ getLevelChangeController() : LevelChangeController}}%$$$M
+\subsubsection*{\texttt{+ getLevelChangeController() : LevelChangeController}}\label{App_Map_ViewModel_getLevelChangeController}%$$$M
 \paragraph*{Beschreibung}
 Gibt den LevelChangeControllers für den Etagenwechsel zurück.
 \paragraph*{Parameter}
@@ -72,7 +72,7 @@ Keine.
 \paragraph*{Rückgabewert}
 \texttt{LevelChangeController} für den Etagenwechsel.
 
-\subsubsection*{\texttt{+ getMapObjectInfoController() : IMapObjectInfoController}}%$$$M
+\subsubsection*{\texttt{+ getMapObjectInfoController() : IMapObjectInfoController}}\label{App_Map_ViewModel_getMapObjectInfoController}%$$$M
 \paragraph*{Beschreibung}
 Gibt den IMapObjectInfoController zurück.
 \paragraph*{Parameter}
@@ -80,7 +80,7 @@ Keine.
 \paragraph*{Rückgabewert}
 \texttt{IMapObjectInfoController}.
 
-\subsubsection*{\texttt{+ getRoomError() : LiveData<(String, String, String)>}}%$$$M
+\subsubsection*{\texttt{+ getRoomError() : LiveData<(String, String, String)>}}\label{App_Map_ViewModel_getRoomError}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt die Error-Daten zurück, wenn ein Raum nicht in der App existiert.
 \paragraph*{Beschreibung}
