Added labels to App/AddAlias

--- a/Kapitel/02_App/04_AddAlias/Klassen/AddAliasScreen/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/AddAliasScreen/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{AddAliasScreen}
+\subsubsection{AddAliasScreen}\label{App_AddAlias_AddAliasScreen}
 \paragraph*{Typ}
 \texttt{Composable}.
 \paragraph*{Beschreibung}
@@ -24,7 +24,7 @@ der AddAliasScreen einen IAddAliasController.
     \item Darunter werden für dieses Kartenobjekt bereits existierende globale Aliasse angezeigt.
 \end{itemize}
 
-\subsubsection*{Bilder}
+\subsubsection*{Bilder}\label{App_AddAlias_AddAliasScreen_Bilder}
 \begin{minipage}{\linewidth}
     \centering
     \begin{minipage}{.49\textwidth}
