--- a/Kapitel/02_App/04_AddAlias/Klassen/AliasDataProvider/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/AliasDataProvider/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{AliasDataProvider}
+\subsubsection{AliasDataProvider}\label{App_AddAlias_AliasDataProvider}
 \paragraph*{Typ}
 Implementiert \texttt{IAliasDataProvider}.
 \paragraph*{Beschreibung}
