--- a/Kapitel/02_App/04_AddAlias/Klassen/SuggestionFeedback/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/SuggestionFeedback/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{SuggestionFeedback}
+\subsubsection{SuggestionFeedback}\label{App_AddAlias_SuggestionFeedback}
 \paragraph*{Typ}
 Enum.
 \paragraph*{Beschreibung}
