--- a/Kapitel/02_App/04_AddAlias/Klassen/IAddAliasController/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/IAddAliasController/main.tex
@@ -1,11 +1,11 @@
-\subsubsection{IAddAliasController}
+\subsubsection{IAddAliasController}\label{App_AddAlias_IAddAliasController}
 \paragraph*{Typ}
 \texttt{Interface}.
 \paragraph*{Beschreibung}
 Der IAddAliasController stellt Methoden bereit um einen Alias bez. Alias-Vorschlag hinzuzufügen. 
 Außerdem stellt er existierende Aliasse bereit.
 
-\subsubsection*{\texttt{+ addLocalAlias(mapId : int, alias : String)}}%$$$M
+\subsubsection*{\texttt{+ addLocalAlias(mapId : int, alias : String)}}\label{App_AddAlias_IAddAliasController_addLocalAlias}%$$$M
 \paragraph*{Beschreibung}
 Speichert einen neuen lokalen Alias.
 \paragraph*{Parameter}
@@ -16,7 +16,7 @@ Speichert einen neuen lokalen Alias.
 \paragraph*{Rückgabewert}
 \texttt{Void}.
 
-\subsubsection*{\texttt{+ suggestGlobalAlias(mapId : int, alias : String) : boolean}}%$$$M
+\subsubsection*{\texttt{+ suggestGlobalAlias(mapId : int, alias : String) : boolean}}\label{App_AddAlias_IAddAliasController_suggestGlobalAlias}%$$$M
 \paragraph*{Kurzbeschreibung}
 Schlägt einen Bezeichner als globalen Alias vor.
 \paragraph*{Beschreibung}
@@ -30,7 +30,7 @@ Konnte der Alias-Vorschlag eingereicht werden, wird \texttt{true} zurückgegeben
 \paragraph*{Rückgabewert}
 \texttt{boolean}, ob das Einreichen erfolgreich war.
 
-\subsubsection*{\texttt{+ getMapObjectData(mapId : int) : (String, String))}}%$$$M
+\subsubsection*{\texttt{+ getMapObjectData(mapId : int) : (String, String))}}\label{App_AddAlias_IAddAliasController_getMapObjectData}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt die Nummer für das Gebäude und ggf. die Raumnummer zurück.
 \paragraph*{Beschreibung}
@@ -46,7 +46,7 @@ Ist die MapId ungültig, wird ein leerer String und \texttt{null} zurückgegeben
 \paragraph*{Rückgabewert}
 \texttt{(String, String)} aus Gebäudenummer und Raumnummer (kann \texttt{null} sein).
 
-\subsubsection*{\texttt{+ getGlobalAliases(mapId : int) : List<String>}}%$$$M
+\subsubsection*{\texttt{+ getGlobalAliases(mapId : int) : List<String>}}\label{App_AddAlias_IAddAliasController_getGlobalAliases}%$$$M
 \paragraph*{Beschreibung}
 Gibt eine Liste aller globalen Aliasse eines Kartenobjekts zurück.
 \paragraph*{Parameter}
@@ -57,7 +57,7 @@ Gibt eine Liste aller globalen Aliasse eines Kartenobjekts zurück.
 \texttt{List<String>}, Liste der globalen Aliasse.
 
 %-----------------------------------------------
-\subsubsection{AddAliasController}
+\subsubsection{AddAliasController}\label{App_AddAlias_AddAliasController}
 \paragraph*{Typ}
 Implementiert \texttt{IAddAliasController}.
 \paragraph*{Beschreibung}
